# RustNote

./: Cargo.toml  config.yml  example.txt
src/: front_of_house.rs  lib.rs  main.rs  ticket.rs
