[package]  
name = "rut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.3.14"
tokio = { version = "1", features = ["full"] }
mysql = "*"  # MySQL客户端库
serde = { version = "1.0", features = ["derive"] }  # 用于解析YAML配置
serde_yaml = "0.9"  # 用于读取YAML文件

[profile.release]
panic = 'abort'